README.mdを修正。IDEでの閲覧、改変を行う際の注意点を追記。。